# rust-sparrow

./: .envrc  Cargo.toml  README.md  rust-toolchain.toml  shell.nix
app/: index.js  package-lock.json  package.json  webpack.config.js
client/: index.js  package-lock.json
client/app/: introduction.js
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: errors.rs  layer.rs  layer_topology.rs  lib.rs  network.rs  neuron.rs  tests.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  config.rs  eye.rs  food.rs  lib.rs  statistics.rs  world.rs
new-client/: backup.js  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
new-client/src/: index.css  index.html  index.js
new-client/src/app/: terminal.js  viewport.js
updated-client/: package.json  webpack.common.js
updated-client/src/: index.html  index.js
www/: index.html  index.js  package-lock.json
www/app/: viewport.js
