[package]
name = "lib-genetic-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
rand_chacha = "0.3.1"
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"
maplit = "1.0.2"
