[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lib-simulation = { path = "../simulation" }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
serde = { version = "1.0.136", features = ["derive"] }
getrandom = { version = "0.2.5", features = ["js"] }

[lib]
crate-type = ["cdylib"]
