[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-neural-network = { path = "../neural-network" }
lib-genetic-algorithm = { path = "../genetic-algorithm" }
nalgebra = { version = "0.30.1", features = ["rand-no-std"] }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
test-case = "2.0.0"